--- a/test/app.Rmd
+++ b/test/app.Rmd
@@ -574,7 +574,7 @@ Here the game is limited to three cards, the first card is revealed but there ar
                
                " 
 
-In this app for a regular deck of cards, a Jack is represented by the card value 10 and 13 for the 'number of cards of each suit in deck' creates a regular deck of cards. Ignore the app for now and imagine having been dealt a Jack, we should guess lower because there are then 9 x 4 = 36 cards in a standard deck of cards that are lower than the Jack, there are 51 cards unseen, so the probability that the first mystery card is lower than a Jack can be calculated as 36/51 ~ 70.6%. However, we should if given the opportunity swap the Jack. This is because relative to the Jack there are six more extreme, so better cards 2, 3, 4, Q, K and A, there are five cards 6, 7, 8, 9, 10 that are worse in comparison to the Jack and the card 5 permits the same chance of guessing the next card correct as we would have with a Jack. So a picture card is not always that great!
+In this app for a regular deck of cards, a Jack is represented by the card value 10 and using 13 for the 'number of cards of each suit in deck' which creates a regular deck of cards. Ignore the app for now and imagine having been dealt a Jack, we should guess lower because there are then 9 x 4 = 36 cards in a standard deck of cards that are lower than the Jack, there are 51 cards unseen, so the probability that the first mystery card is lower than a Jack can be calculated as 36/51 ~ 70.6%. However, we should if given the opportunity swap the Jack. This is because relative to the Jack there are six more extreme, and therefore better cards 2, 3, 4, Q, K and A, there are five cards 6, 7, 8, 9, 10 that are worse in comparison to the Jack and the 5 card permits the same chance of guessing the next card correct as we would have with a Jack. So a picture card is not always that great!
 
  ") ,
       
@@ -624,7 +624,7 @@ However, The app allows you to choose the first dealt card [2nd box on left] and
                
                " 
 
-When to swap is quite intuitive as explained in the introduction. It is interesting however, that if you were to swap your initial card regardless of its value (a bad idea if you want to win), the probability of winning is the same no matter what value the initial card is, with one exception, the middle card, this has an oh so very slight increase in the probability of winning relative to all the other cards. Observe this by comparing the red probabilities quoted above whilst varying the first card dealt. The simulation is not sensitive enough to reveal this, unless I presume you can perfrom a massive number of simulations. 
+When to swap is quite intuitive as explained in the introduction. It is interesting however, that if you were to swap your initial card regardless of its value (a bad idea if you want to win), the probability of winning is the same no matter what value the initial card is, with one exception, the middle card, this has an oh so very slight increase in the probability of winning relative to all the other cards. Observe this by comparing the red probabilities quoted above whilst varying the first card dealt. The simulation is not sensitive enough to reveal this, unless I presume you can perform a massive number of simulations. 
 
 Check out the R code and other links on the left, have fun.") ,
       
