--- a/test/app.Rmd
+++ b/test/app.Rmd
@@ -488,11 +488,11 @@ Column {data-width=300}
 
 h5(htmlOutput("intro1")) 
 br()
-h5(htmlOutput("intro1a"))
+h5(htmlOutput("intro3"))
 br()
 h5(htmlOutput("intro2"))  
 br()
-h5(htmlOutput("intro3"))  
+h5(htmlOutput("intro1a"))  
 
 #-------------------------------------------------------------------------------------------------------
 
@@ -574,7 +574,7 @@ Here the game is limited to three cards, the first card is revealed but there ar
                
                " 
 
-In this app a Jack is represented by the card value 10 and using 13 for the 'number of cards of each suit in deck' a regular deck of cards is created. Ignore the app for now and imagine having been dealt a Jack, we should guess lower because there are then 9 x 4 = 36 cards in a standard deck of cards that are lower than the Jack, there are 51 cards unseen, so the probability that the first mystery card is lower than a Jack can be calculated as 36/51 ~ 70.6%. However, we should if given the opportunity swap the Jack. This is because relative to the Jack there are six more extreme, and therefore better cards 2, 3, 4, Q, K and A, there are five cards 6, 7, 8, 9, 10 that are worse in comparison to the Jack and the 5 card permits the same chance of guessing the next card correct as we would have with a Jack. So a picture card is not always that great!
+Imagine having been dealt a Jack, we should guess lower because there are then 9 x 4 = 36 cards in a standard deck of cards that are lower than the Jack, there are 51 cards unseen, so the probability that the first mystery card is lower than a Jack can be calculated as 36/51 ~ 70.6%. However, we should if given the opportunity swap the Jack. This is because relative to the Jack there are six more extreme, and therefore better cards 2, 3, 4, Q, K and A, there are five cards 6, 7, 8, 9, 10 that are worse in comparison to the Jack and the 5 card permits the same chance of guessing the next card correct as we would have with a Jack. So a picture card is not always that great!
 
  ") ,
       
@@ -582,6 +582,7 @@ In this app a Jack is represented by the card value 10 and using 13 for the 'num
 
  })
  
+
  #-------------------------------------------------------------------------------------------------------
 
  
@@ -601,7 +602,11 @@ In this app a Jack is represented by the card value 10 and using 13 for the 'num
 
 Instead of using a standard playing card deck we use the numbers 1 to 13 (default) and have 4 copies to mimic a standard deck of playing cards.
 
-However, The app allows you to choose the first dealt card [2nd box on left] and vary the number of cards in a suit - it must be an odd number.  ") ,
+However, The app allows you to choose the first dealt card [2nd box on left] and vary the number of cards in a suit - it must be an odd number. 
+
+In this app a Jack is represented by the card value 10 when using 13 for the 'number of cards of each suit in deck' a regular deck of cards is created. Ignore the app for now and 
+
+") ,
       
        "."))
 
